--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
 }
 
 body {
+  height: 100vh;
   margin: 0;
   padding: 0;
+  background: url('/images/bg.jpg') no-repeat center center fixed;
+  background-size: cover;
+  overflow: hidden;
 }
