--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ body {
   overflow: hidden;
 }
 
+#root {
+  height: 100vh;
+}
+
+.page-no-sidebar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+
