--- a/src/colors.css
+++ b/src/colors.css
@@ -4,7 +4,7 @@
   --brown: #a19478;
   --dark-green: #516333;
   --green: #637348;
-  --light-green: #707f57;
+  --light-green: #627348;
   --dark-red: #cc5744;
   --beige: #e8d8b5;
   --light-beige: #f1e9D5;
