--- a/src/colors.css
+++ b/src/colors.css
@@ -5,6 +5,7 @@
   --dark-green: #516333;
   --green: #637348;
   --light-green: #627348;
+  --bright-green: #a5cf66;
   --dark-red: #cc5744;
   --beige: #e8d8b5;
   --light-beige: #f1e9D5;
