--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,7 +11,7 @@
   color: var(--dark-green);
 }
 
-.Footer span {
+.Footer span.connection-dot {
   display: inline-block;
   height: 10px;
   width: 10px;
