--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,12 @@ body {
   height: 100vh;
 }
 
-.page-no-sidebar {
+.App .page-no-sidebar {
   display: flex;
   justify-content: center;
   align-items: center;
   flex: 1;
+  margin: 0;
 }
 
 .toast-error {
