--- a/src/pages/EventsPage.css
+++ b/src/pages/EventsPage.css
@@ -1,8 +1,16 @@
 .EventsPage {
-  width: 80%;
-  margin: 20px auto;
+  width: 100%;
+  margin: 20px;
   display: grid;
-  grid-template-columns: 400px auto;
-  grid-template-rows: auto auto;
-  grid-gap: auto 20px;
+  grid-gap: 20px;
+  grid-template-areas:
+    "sidebar"
+    "content";
+}
+
+@media (min-width: 600px) {
+  .EventsPage {
+    grid-template-columns: 1fr 3fr;
+    grid-template-areas: "sidebar content";
+  }
 }
