--- a/src/components/EventSelector.css
+++ b/src/components/EventSelector.css
@@ -7,6 +7,8 @@
 }
 
 .EventSelector-top-controls {
-  margin: 10px auto;
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 0 20px;
 }
 
