Edited event now updates redux state via socket.io!

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body {
   color: white;
 }
 
+.toast-success {
+  background-color: var(--green);
+  color: white;
+}
+
 .dropdown-trigger:focus {
   outline: none;
 }
