Add initial code for CompetitorsPage, cometitors redux, etc.

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,10 @@ body {
   border-bottom: 1px solid var(--light-green);
 }
 
+.section-title span {
+  color: black;
+}
+
 /* misc materialize overrides */
 .App span.badge {
   font-weight: 300;
