--- a/src/colors.css
+++ b/src/colors.css
@@ -6,7 +6,7 @@
   --green: #637348;
   --light-green: #627348;
   --bright-green: #a5cf66;
-  --dark-red: #cc5744;
+  --dark-red: #ca5748;
   --beige: #e8d8b5;
   --light-beige: #f1e9D5;
   --blue-grey: #6c7F83;
