--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,37 @@ body {
   font-size: 18px;
 }
 
+.chip {
+  /* prevents jitter when hovering over materialize chip class */
+  border: 1px solid transparent;
+}
+
+.chip.clickable {
+  cursor: pointer;
+}
+
+.chip.clickable:hover {
+  border: 1px solid var(--dark-green);
+}
+
+.flex-row-between-ctr {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.flex1 {
+  flex: 1;
+}
+
+.flex1 {
+  flex: 2;
+}
+
+.flex3 {
+  flex: 3;
+}
+
+.flex4 {
+  flex: 4;
+}
